--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,31 @@
 /*  your css code here. If applicable */
+body{
+	background-color: rgb(204, 204, 204);
+}
+h1,h2{
+	text-align:center;
+}
+
+.song-container{
+	border:2px solid black;
+	border-radius:10px;
+	width:800px;
+	height:150px;
+	padding:15px;
+}
+.song-list{
+	padding:10px;
+	font-size:18px;
+	margin-left:10px;
+}
+.audio-container{
+	width:700px;
+	height:550px;
+	border:2px solid black;
+	border-radius:10px;
+	padding:15px;
+	margin-left:50px;
+}
+.player_two{
+	margin-left:200px;
+}
